# makter

./: .env.sample  .gitignore  README.md  docker-compose.yaml
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/scripts/: core-entrypoint.sh
