[tool.poetry]
name = "poetry-makter"
version = "0.1.0"
description = ""
authors = ["iMaksus <max1112vas@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_makter"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
SQLAlchemy = "^1.4.46"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.5"
SQLAlchemy-Utils = "^0.39.0"
alembic = "^1.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
